# voxelgame-opengl-qt

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
.github/workflows/: cmake.yml
cmake/: FindLibNoise.cmake
shaders/chunk/: fragment.glsl  vertex.glsl
shaders/selection/: fragment.glsl  vertex.glsl
shaders/water/: fragment.glsl  vertex.glsl
src/: arithmetic.h  block_mesh.cpp  block_mesh.h  block_mesh_vertex_builder.cpp  block_mesh_vertex_builder.h  block_vertex.h  blocking_queue.cpp  blocking_queue.h  chunk.cpp  chunk.h  chunk_mesh.cpp  chunk_mesh.h  chunk_mesh_manager.cpp  chunk_mesh_manager.h  chunk_mesh_vertex_builder.cpp  chunk_mesh_vertex_builder.h  chunk_surrounder.cpp  chunk_surrounder.h  geometry.cpp  geometry.h  input.cpp  input.h  main.cpp  multimap3d.h  noise.cpp  noise.h  physics_loop.cpp  physics_loop.h  player.cpp  player.h  raycast.cpp  raycast.h  selection_renderer.cpp  selection_renderer.h  synchronized_queue.cpp  synchronized_queue.h  time_bounded_gl_executor.cpp  time_bounded_gl_executor.h  update_connector.h  vertex.h  (+18 more)
src/blocks/: air_block.cpp  air_block.h  block.cpp  block.h  cobblestone_block.cpp  cobblestone_block.h  grass_block.cpp  grass_block.h  sand_block.cpp  sand_block.h  stone_block.cpp  stone_block.h  water_block.cpp  water_block.h
test/: all_tests.cpp  ray_tests.cpp
